Fixed displaying HintLabel's hint even when the text is entirely visible in IE8

--- a/liveDemo/core/resources/hintlabel/hintlabel.css
+++ b/liveDemo/core/resources/hintlabel/hintlabel.css
@@ -6,10 +6,6 @@
   padding-left: 5px;
 }
 
-.hintLabel_label {
-  width: 100%;
-}
-
 .hintLabel_hint {
   background-color: #ffffff;
   color: black;
